apps/iota-network/app/globals.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

@import 'react-ui-kit/dist/style.css';

html,
body {
    width: 100%;
    height: 100%;
    scroll-behavior: smooth;
}

/* Important for smooth transitions in the swiper component of InfiniteCarousel*/
.swiper-container-infinite-loop > .swiper-wrapper {
    transition-timing-function: linear !important;
    will-change: transform;
}
/* Static Carousel */
.static-swiper > .swiper-wrapper {
    transition-timing-function: linear !important;
    will-change: transform;
    display: flex !important;
    align-items: center !important;
    justify-content: center !important;
}

.swiper-pagination-custom {
    --swiper-pagination-color: theme('colors.network-primary.20');
    --swiper-pagination-bullet-inactive-color: theme('colors.transparency-black.24');
    --swiper-pagination-bullet-inactive-opacity: 1;
    --swiper-pagination-bullet-size: 8px;
    --swiper-pagination-bullet-active-size: 8px;
    --swiper-pagination-bullet-horizontal-gap: 4px;
}

.swiper-pagination-inverted {
    --swiper-pagination-color: theme('colors.network-primary.40');
    --swiper-pagination-bullet-inactive-color: theme('colors.transparency-white.24');
}

